<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.b3dgs.lionheart</groupId>
        <artifactId>lionheart-parent</artifactId>
        <version>1.4.0-SNAPSHOT</version>
        <relativePath>../lionheart-parent/pom.xml</relativePath>
    </parent>
    <artifactId>lionheart-pc</artifactId>
    <packaging>jar</packaging>
    <name>Lionheart Remake PC</name>
    <properties>
        <jdk.version>17</jdk.version>
        <jdk-release.version>${jdk.version}</jdk-release.version>
        <jna.version>5.14.0</jna.version>
        <sdl2gdx.version>1.0.4</sdl2gdx.version>
        <checkstyle.skip>true</checkstyle.skip>
    </properties>
    <repositories>
        <repository>
            <id>jcenter</id>
            <name>JCenter</name>
            <layout>default</layout>
            <url>https://jcenter.bintray.com/</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>
    <dependencies>
        <dependency>
            <groupId>com.b3dgs.lionengine</groupId>
            <artifactId>lionengine-core-awt</artifactId>
            <version>${lionengine.version}</version>
        </dependency>
        <dependency>
            <groupId>com.b3dgs.lionengine</groupId>
            <artifactId>lionengine-audio-wav</artifactId>
            <version>${lionengine.version}</version>
        </dependency>
        <dependency>
            <groupId>net.java.dev.jna</groupId>
            <artifactId>jna</artifactId>
            <version>${jna.version}</version>
        </dependency>
        <dependency>
            <groupId>com.b3dgs.lionengine</groupId>
            <artifactId>lionengine-audio-sc68</artifactId>
            <version>${lionengine.version}</version>
        </dependency>
        <dependency>
            <groupId>com.b3dgs.lionheart</groupId>
            <artifactId>lionheart-assets</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.b3dgs.lionheart</groupId>
            <artifactId>lionheart-game</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>uk.co.electronstudio.sdl2gdx</groupId>
            <artifactId>sdl2gdx</artifactId>
            <version>${sdl2gdx.version}</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <excludedGroups>manual</excludedGroups>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>com.b3dgs.lionheart.Main</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>unpack-dependencies</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>unpack-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.outputDirectory}</outputDirectory>
                            <overWriteReleases>false</overWriteReleases>
                            <overWriteSnapshots>false</overWriteSnapshots>
                            <overWriteIfNewer>true</overWriteIfNewer>
                            <excludeArtifactIds>${lionheart-pc-excludes}</excludeArtifactIds>
                            <excludeGroupIds>org.apiguardian,org.hamcrest,org.opentest4j,org.junit,junit</excludeGroupIds>
                            <excludes>
                                armeabi-v7a/,arm64-v8a/,com/sun/jna/freebsd*/,com/sun/jna/openbsd*/,com/sun/jna/sunos*/,com/sun/jna/android*/,com/sun/jna/*ppc*/,com/sun/jna/*arm*/,com/sun/jna/*aarch64/,com/sun/jna/sunos-sparc*/,com/sun/jna/linux-s390x/,com/sun/jna/linux-riscv64/,com/sun/jna/linux-mips64el/,
                                com/badlogic/gdx.gwt.xml,com/badlogic/gdx/assets/,com/badlogic/gdx/audio/,com/badlogic/gdx/files/,com/badlogic/gdx/graphics/,com/badlogic/gdx/maps/,com/badlogic/gdx/net/,com/badlogic/gdx/scenes/,
                                com/badlogic/gdx/Net**,com/badlogic/gdx/Graphics**,com/badlogic/gdx/Application**,com/badlogic/gdx/Audio**,com/badlogic/gdx/Input**,com/badlogic/gdx/Screen**,com/badlogic/gdx/Files**,com/badlogic/gdx/Game**,com/badlogic/gdx/Lifecycle**,com/badlogic/gdx/Preferences**,com/badlogic/gdx/Version**,
                                com/badlogic/gdx/jnigen/resources/,com/badlogic/gdx/jnigen/test/,com/badlogic/gdx/utils/async/,com/badlogic/gdx/utils/compression/,com/badlogic/gdx/utils/reflect/,com/badlogic/gdx/utils/viewport/,
                                com/badlogic/gdx/utils/arial*,com/badlogic/gdx/utils/B*,com/badlogic/gdx/utils/C*,com/badlogic/gdx/utils/D*,com/badlogic/gdx/utils/E*,com/badlogic/gdx/utils/F*,com/badlogic/gdx/utils/H*,com/badlogic/gdx/utils/J*,com/badlogic/gdx/utils/K*,com/badlogic/gdx/utils/L*,com/badlogic/gdx/utils/M*,com/badlogic/gdx/utils/N*,com/badlogic/gdx/utils/O*,com/badlogic/gdx/utils/P*,com/badlogic/gdx/utils/Q*,com/badlogic/gdx/utils/R*,com/badlogic/gdx/utils/S*,com/badlogic/gdx/utils/T*,com/badlogic/gdx/utils/U*,com/badlogic/gdx/utils/V*,com/badlogic/gdx/utils/W*,com/badlogic/gdx/utils/X*,com/badlogic/gdx/utils/Y*,com/badlogic/gdx/utils/Z*,
                                com/github/,uk/co/electronstudio/sdl2gdx/tests/, com/badlogic/gdx/controllers/desktop/, com/badlogic/gdx/controllers/lwjgl3/, com/badlogic/gdx/jnigen/BuildExecutorFixed.class.class, com/badlogic/gdx/jnigen/BuildExecutorFixed$1.class,
                            </excludes>
                        </configuration>
                    </execution>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <skip>true</skip>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>report-aggregate</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>report-aggregate</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>